Update to use new build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 project(libygodata)
 
-################################
-# Compiler setup
-################################
-
-add_definitions(-Wall)
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
-    "${CMAKE_SOURCE_DIR}/../cmake/modules/")
-
-################################
-# Third party libraries
-################################
-
-################################
-# Libraries
-################################
+set(DATA_VERSION "0.0.1")
 
 ################################
 # Locate source
@@ -29,17 +13,20 @@ include_directories(include)
 include_directories(include/ygo/data)
 
 ################################
-# Resources
-################################
-
-################################
-# Libraries
-################################
-
-################################
 # Build targets
 ################################
 add_library(ygodata SHARED
     ${SRC}
     ${INCLUDES})
+
+################################
+# Export library
+################################
+
+export_project(
+    NAME libygodata
+    INCLUDES ${CMAKE_CURRENT_LIST_DIR}/include
+    LIBS ygodata
+    VERSION ${DATA_VERSION}
+)
 
