Add serialization for decks
This allows exporting and importing of deck data

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,13 @@ project(libygodata)
 set(DATA_VERSION "0.0.1")
 
 ################################
+# Third party libraries
+################################
+find_package(Boost 1.55.0 COMPONENTS system thread REQUIRED)
+
+include_directories(${BOOST_INCLUDE_DIRS})
+
+################################
 # Locate source
 ################################
 file(GLOB_RECURSE INCLUDES include/*.h)
@@ -12,11 +19,21 @@ file(GLOB_RECURSE SRC src/*.cpp)
 include_directories(include)
 
 ################################
+# Libraries
+################################
+set(YGODATA_LIBS
+    ${Boost_LIBRARIES}
+    )
+
+################################
 # Build targets
 ################################
 add_library(ygodata SHARED
     ${SRC}
     ${INCLUDES})
+
+target_link_libraries(ygodata
+    ${YGODATA_LIBS})
 
 ################################
 # Export library
