Move C++->C conversion to a binding library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,3 +62,5 @@ export_java_project(
     NAME ygodata-java
     INCLUDES ${CMAKE_CURRENT_BINARY_DIR}/include/ygo/data/java
 )
+
+add_subdirectory(binding)
