--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(DATA_VERSION "0.0.1")
 ################################
 # Third party libraries
 ################################
-find_package(Boost 1.55.0 COMPONENTS system REQUIRED)
+find_package(Boost 1.55.0 COMPONENTS system thread atomic REQUIRED)
 find_package(jniw)
 find_package(zephyr)
 
